--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>About Me</title>
+    <title>Fast Food Chains With A Twist</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h1>About This Site</h1>
-    <p>This is a second page on my site. Pretty cool, right?</p>
+    <h1>Caution before reading</h1>
+    <p>To be updated</p>
     <p><a href="index.html">Back to Home</a></p>
 </body>
 
