--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <h1>Hello World 👋</h1>
-    <p>Welcome to my website hosted with GitHub Pages!</p>
-    <p><a href="about.html">Go to About Page</a></p>
+    <h1>Hello Weirdos</h1>
+    <p>It's nice to see another weirdo has stumbled upon this mystical page</p>
+    <p>So what brings you here great sir?</p>
+    <p><a href="about.html">Fast food chain sentences with a twist</a></p>
 </body>
 
 </html>
