--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <h1>Hello Weirdos</h1>
-    <p>It's nice to see another weirdo has stumbled upon this mystical page</p>
+    <h1>A Random Website</h1>
+    <p>It's nice to see someone has stumbled across this mystical page</p>
     <p>So what brings you here great sir?</p>
-    <p><a href="about.html">Fast food chain sentences with a twist</a></p>
+    <p><a href="Student_Rights.html">Your rights as a student in NZ</a></p>
 </body>
 
 </html>
